plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'org.ajoberstar.grgit' version '2.3.0'
    id 'net.neoforged.gradle.userdev' version '7.0.170'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

ext {
    mod_version = gitVersion()
}

version = mod_version
group = mod_group_id

repositories {
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    mavenLocal()
}

base {
    archivesName = "${compile_name}-${minecraft_version}"
}

// Mojang ships Java 21 to end users starting in 1.20.5, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')

// Default run configurations.
// These can be tweaked, removed, or duplicated as needed.
runs {
    // applies to all the run configs below
    configureEach {
        // Recommended logging data for a userdev environment
        // The markers can be added/remove as needed separated by commas.
        // "SCAN": For mods scan.
        // "REGISTRIES": For firing of registry events.
        // "REGISTRYDUMP": For getting the contents of all registries.
        systemProperty 'forge.logging.markers', 'REGISTRIES'

        // Recommended logging level for the console
        // You can set various levels here.
        // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
        systemProperty 'forge.logging.console.level', 'debug'

        modSource project.sourceSets.main
    }

    client {
        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_group_id
    }

    server {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_group_id
        //argument '--nogui'
    }

    // This run config launches GameTestServer and runs all registered gametests, then exits.
    // By default, the server will crash when no gametests are provided.
    // The gametest system is also enabled by default for other run configs under the /test command.
    // gameTestServer {
    //     systemProperty 'forge.enabledGameTestNamespaces', project.mod_group_id
    // }

    data {
        // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
        // workingDirectory project.file('run-data')

        // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
        arguments.addAll '--mod', project.mod_group_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }

    client_1 {
        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
        run 'client' //In case you want to clone the client run into the someRun
       // configure runTypes.client //In case you want to clone the client run type into the someRun
        arguments '--username', 'Dev1'
    }

    client_2 {
        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
        run 'client' //In case you want to clone the client run into the someRun
       // configure runTypes.client //In case you want to clone the client run type into the someRun
        arguments '--username', 'Dev2'
    }

    client_3 {
        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
        run 'client' //In case you want to clone the client run into the someRun
       // configure runTypes.client //In case you want to clone the client run type into the someRun
        arguments '--username', 'Dev3'
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

sourceSets.main.resources { srcDir 'src/thutcore/resources' }
sourceSets.main.java { srcDir 'src/thutcore/java' }

sourceSets.main.resources { srcDir 'src/wearables/resources' }
sourceSets.main.java { srcDir 'src/wearables/java' }

//* Main Pokecube set
sourceSets.main.resources { srcDir 'src/pokecube/resources' }
sourceSets.main.java { srcDir 'src/pokecube/java' }
//*/

//* Pokecube Adventures
sourceSets.main.resources { srcDir 'src/adventures/resources' }
sourceSets.main.java { srcDir 'src/adventures/java' }
//*/

//* Pokecube Compat
sourceSets.main.resources { srcDir 'src/compat/resources' }
sourceSets.main.java { srcDir 'src/compat/java' }
//*/

//* Pokecube Legends
sourceSets.main.resources { srcDir 'src/legends/resources' }
sourceSets.main.java { srcDir 'src/legends/java' }
//*/

/** Test code
sourceSets.main.resources { srcDir 'src/test/resources' }
sourceSets.main.java { srcDir 'src/test/java' }
//**/

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // Specify the version of Minecraft to use.
    // Depending on the plugin applied there are several options. We will assume you applied the userdev plugin as shown above.
    // The group for userdev is net.neoforged, the module name is neoforge, and the version is the same as the neoforge version.
    // You can however also use the vanilla plugin (net.neoforged.gradle.vanilla) to use a version of Minecraft without the neoforge loader.
    // And its provides the option to then use net.minecraft as the group, and one of; client, server or joined as the module name, plus the game version as version.
    // For all intends and purposes: You can treat this dependency as if it is a normal library you would use.
    implementation "net.neoforged:neoforge:${neo_version}"

    // Example optional mod dependency with JEI
    // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
    //compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    //compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    // We add the full version to localRuntime, not runtimeOnly, so that we do not publish a dependency on it
    //localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    
    implementation "curse.maven:jei-${version_jei}"

    // Example mod dependency using a mod jar from ./libs with a flat dir repository
    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
    // The group id is ignored when searching -- in this case, it is "blank"
    // implementation "blank:coolmod-${mc_version}:${coolmod_version}"

    // Example mod dependency using a file as dependency
    // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")

    // Example project dependency using a sister or child project:
    // implementation project(":myproject")

    // For more info:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

def gitVersion() {
    def raw = grgit.describe(longDescr: true) as String
    if (raw.startsWith("${minecraft_version}-")){
        raw = raw.replaceFirst("${minecraft_version}-","")
    }
    else return mod_version
    def desc = (raw == null ? 'unknown-offset-hash' : raw.split('-')) as List
    def vars = desc.get(0)
    def splis = vars.split(/[.]/)
    def majver = splis[0].toInteger()
    def subver = splis[1].toInteger()
    def offset = splis[2].toInteger()
    def ver = offset + 1
    return "${majver}.${subver}.${ver}"
}